<resources>
    <string name="app_name">Reading_App</string>
    <string name="action_settings">Settings</string>

    <!-- file reading -->
    <string name="unread_file">unread</string>
    <string name="read_file">read</string>

    <!-- action (round_button) name -->
    <string name="start_action">Start</string>
    <string name="next_action">Next</string>
    <string name="back_action">Back</string>
    <string name="read_action">Read</string>
    <string name="close_action">Close</string>

    <!-- prompt content -->
    <string name="welcome_prompt">Welcome!</string>
    <string name="agreement_prompt">By checking this box, I confirmed that …</string>
    <string name="name_input_prompt">Please enter your name below: </string>
    <string name="name_hint_prompt">Full Name required</string>
    <string name="gender_input_prompt">Please select your gender below: </string>

    <!-- array -->
    <string-array name="gender_arrays">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
        <item>Perfer not to answer</item>
    </string-array>

    <!-- error and request -->
    <string name="permission_request">[Error] This sample needs permission for camera and audio recording.</string>
    <string name="name_miss_msg">[Error] Name required</string>
    <string name="load_text_fail">[Error] Fail to load text</string>
</resources>
