<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/personalInfoPage"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor">

    <Button
        android:id="@+id/backButton"
        android:layout_width="@dimen/page_switch_button_width"
        android:layout_height="@dimen/page_switch_button_height"
        android:background="@drawable/round_button"
        android:fontFamily="@font/roboto"
        android:text="@string/back_action"
        android:textSize="@dimen/page_switch_text_size"
        android:textColor="?attr/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="@dimen/page_switch_button_width"
        android:layout_height="@dimen/page_switch_button_height"
        android:background="@drawable/round_button"
        android:fontFamily="@font/roboto"
        android:text="@string/next_action"
        android:textSize="@dimen/page_switch_text_size"
        android:textColor="?attr/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/scroll_margin_top"
        android:layout_marginBottom="@dimen/scroll_margin_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nextButton" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_input_prompt"
                android:textSize="@dimen/default_text_size"
                android:textColor="?attr/textColor"
                android:padding="@dimen/text_padding"
                android:fontFamily="@font/roboto"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint_prompt"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:padding="@dimen/text_padding"
                android:fontFamily="@font/roboto"
                android:background="?attr/subbackgroundColor"
                android:textColor="?attr/textColor"
                android:textColorHint="?attr/hintTextColor"/>

            <Space
                android:layout_width="1dp"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/genderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender_input_prompt"
                android:textSize="@dimen/default_text_size"
                android:textColor="?attr/textColor"
                android:padding="@dimen/text_padding"
                android:fontFamily="@font/roboto"/>

            <Spinner
                android:id="@+id/genderSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:padding="12dp"
                android:background="?attr/subbackgroundColor"/>

            <Space
                android:layout_width="1dp"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/Test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TEST: "
                android:textSize="@dimen/default_text_size"
                android:textColor="?attr/textColor"
                android:padding="@dimen/text_padding"
                android:fontFamily="@font/roboto"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/testInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Test"
                android:imeOptions="actionDone"
                android:padding="@dimen/text_padding"
                android:fontFamily="@font/roboto"
                android:background="?attr/subbackgroundColor"
                android:textColor="?attr/textColor"
                android:textColorHint="?attr/hintTextColor"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>